--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+*.]
 *$py.class
 
 # C extensions
@@ -105,3 +105,6 @@ venv.bak/
 
 #token
 get_token.py
+
+#swap files
+*/.*.py.swp
